feat(completions): update
- bun
- du

--- a/completions/bun/language/en-US.json
+++ b/completions/bun/language/en-US.json
@@ -1260,7 +1260,21 @@
             "name": "--install",
             "tip": [
                 "Configure auto-install behavior.\n",
-                "One of \"auto\" (default, auto-installs when no node_modules), \"fallback\" (missing packages only), \"force\" (always)."
+                "Possible values: \"auto\", \"fallback\", \"force\""
+            ],
+            "next": [
+                {
+                    "name": "auto",
+                    "tip": "default, auto-installs when no node_modules"
+                },
+                {
+                    "name": "fallback",
+                    "tip": "missing packages only"
+                },
+                {
+                    "name": "force",
+                    "tip": "always"
+                }
             ]
         },
         {
