--- a/completions/bun/language/zh-CN.json
+++ b/completions/bun/language/zh-CN.json
@@ -1260,7 +1260,21 @@
             "name": "--install",
             "tip": [
                 "配置自动安装行为\n",
-                "可以是 \"auto\" (默认, 当不存在 node_modules 时自动安装), \"fallback\" (仅缺少的包), \"force\" (始终安装) 中的一个"
+                "可用的值: auto/fallback/force"
+            ],
+            "next": [
+                {
+                    "name": "auto",
+                    "tip": "默认, 当不存在 node_modules 时自动安装"
+                },
+                {
+                    "name": "fallback",
+                    "tip": "仅缺少的包"
+                },
+                {
+                    "name": "force",
+                    "tip": "始终安装"
+                }
             ]
         },
         {
