--- a/completions/du/language/en-US.json
+++ b/completions/du/language/en-US.json
@@ -256,6 +256,17 @@
         "show time of the last modification of any file in the directory, or any of its subdirectories.\n",
         "If WORD is given, show time as WORD instead of modification time: atime, access, use, ctime, status, birth or creation\n",
         "[possible values: atime, ctime, creation]"
+      ],
+      "next": [
+        {
+          "name": "atime"
+        },
+        {
+          "name": "ctime"
+        },
+        {
+          "name": "creation"
+        }
       ]
     },
     {
