--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1550,11 +1550,9 @@
         "补全文件所在目录: <@Blue>{{ $completion_dir }}\n",
         "{{",
         "if($json.config){",
-        " '<@Blue>---------- 补全特殊配置 ---------- ';",
+        " \"<@Blue>---------- $($completion) 补全特殊配置 ---------- \";",
         " $config_list=$json.config | ForEach-Object {",
-        "   $config_value = $PSCompletions.config.comp_config.$completion.$($_.name);",
-        "   $value = if($config_value -ne $null){ \"`n当前值: $($config_value)\" };",
-        "   \"`n<@Magenta>$($_.name)<@Blue>: $($value)`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
+        "   \"`n<@Magenta>$($_.name)<@Blue>:`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
         " };",
         " $config_list -join \"`n\";",
         " \"`n<@Blue>----------------------------------\";",
@@ -1610,11 +1608,9 @@
         "补全文件所在目录: <@Blue>{{ $completion_dir }}\n",
         "{{",
         "if($json.config){",
-        " '<@Blue>---------- 补全特殊配置 ---------- ';",
+        " \"<@Blue>---------- $($completion) 补全特殊配置 ---------- \";",
         " $config_list=$json.config | ForEach-Object {",
-        "   $config_value = $PSCompletions.config.comp_config.$completion.$($_.name);",
-        "   $value = if($config_value -ne $null){ \"`n当前值: $($config_value)\" };",
-        "   \"`n<@Magenta>$($_.name)<@Blue>: $($value)`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
+        "   \"`n<@Magenta>$($_.name)<@Blue>:`n默认值: $($_.value)`n$($PSCompletions.replace_content($_.tip))\"",
         " };",
         " $config_list -join \"`n\";",
         " \"`n<@Blue>----------------------------------\";",
@@ -1985,8 +1981,10 @@
         0
       ],
       "tip": [
-        "设置是否禁用 hooks，默认为 0 表示不禁用\n",
-        "psc 中的 hooks 主要用于获取已添加的补全名称、可添加的补全名称等, 然后动态添加到一些命令补全中(如 <@Magenta>add<@Blue>, <@Magenta>rm<@Blue>, <@Magenta>update<@Blue>, <@Magenta>completion<@Blue>, <@Magenta>alias<@Blue> 等)\n",
+        "当前值: <@Magenta>{{$PSCompletions.config.comp_config.psc.disable_hooks}}<@Blue>\n",
+        "设置是否禁用 hooks，默认为 0 表示启用\n",
+        "hooks 将获取已添加或可添加的补全名称, 然后动态添加到命令补全中\n",
+        "(如 <@Magenta>add<@Blue>, <@Magenta>rm<@Blue>, <@Magenta>update<@Blue>, <@Magenta>completion<@Blue>, <@Magenta>alias<@Blue> 等)\n",
         "如: 输入 <@Magenta>psc rm<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取已添加的补全名称的补全\n",
         "你可以通过运行 <@Magenta>psc completion psc disable_hooks 1<@Blue> 来禁用 hooks"
       ]
