--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -787,9 +787,12 @@
         0
       ],
       "tip": [
+        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.scoop.disable_hooks}}<@Blue>\n",
         "Set whether to disable hooks. Default to 0.\n",
-        "The scoop hooks are used to get the name of the installed apps, bucket name, cache, etc. and then dynamically add them to some completions. (e.g. <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue>, <@Magenta>bucket<@Blue>, <@Magenta>cache rm<@Blue>, <@Magenta>hold<@Blue>, etc.)\n",
-        "For example, enter <@Magenta>scoop uninstall<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions about the name of the installed apps.\n",
+        "The hooks will get the name of the installed apps, cache, etc. and add them in completions dynamically.\n",
+        "(e.g. <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue>, <@Magenta>bucket<@Blue>, <@Magenta>cache rm<@Blue>, <@Magenta>hold<@Blue>...)\n",
+        "For example, enter <@Magenta>scoop uninstall<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key,\n",
+        "and you can get some extra completions about the name of the installed apps.\n",
         "You can disable hooks by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
       ]
     }
