--- a/completions/wsl/language/en-US.json
+++ b/completions/wsl/language/en-US.json
@@ -450,10 +450,13 @@
         0
       ],
       "tip": [
+        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.wsl.disable_hooks}}<@Blue>\n",
         "Set whether to disable hooks. Default to 0.\n",
-        "The wsl hooks are used to get the distro name, and then dynamically add it to some completions. (e.g. <@Magenta>-d/--distribution<@Blue>, <@Magenta>-t/--terminate<@Blue>, etc.)\n",
-        "For example, after entering <@Magenta>wsl -d<@Blue>, pressing <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions.\n",
-        "You can disable hooks by running <@Magenta>psc completion scoop disable_hooks 1<@Blue>."
+        "The hooks will get the distro name, and add it in completions dynamically.\n",
+        "(e.g. <@Magenta>-d<@Blue>/<@Magenta>--distribution<@Blue>, <@Magenta>-t<@Blue>/<@Magenta>--terminate<@Blue>...)\n",
+        "For example, enter <@Magenta>wsl -d<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key,\n",
+        "and you can get some extra completions about WSL distributions.\n",
+        "You can disable hooks by running <@Magenta>psc completion wsl disable_hooks 1<@Blue>."
       ]
     }
   ]
