--- a/completions/git/language/en-US.json
+++ b/completions/git/language/en-US.json
@@ -2025,10 +2025,13 @@
         0
       ],
       "tip": [
+        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.git.disable_hooks}}<@Blue>\n",
         "Set whether to disable hooks. Default to 0.\n",
-        "Hooks in git are mainly used to parse commit information, branch information, etc., and then dynamically add them to some completions (such as reset,checkout,branch, etc.)\n",
-        "For example, enter <@Magenta>git reset<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue>, and you can get the resolved commit completions.\n",
-        "If you don't need it, you can disable it, which will improve the loading speed of the completion.\n",
+        "The hooks will parse commit/branch/... information, and add them in completions dynamically.\n",
+        "(e.g. <@Magenta>reset<@Blue>,<@Magenta>checkout<@Blue>,<@Magenta>branch<@Blue>...)\n",
+        "For example, enter <@Magenta>git reset<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key,\n",
+        "and you can get the resolved commit completions.\n",
+        "You can disable hooks by running <@Magenta>psc completion git disable_hooks 1<@Blue>.\n",
         "If you disable it, the <@Magenta>max_commit<@Blue> configuration will also be invalid."
       ]
     },
@@ -2040,7 +2043,8 @@
         20
       ],
       "tip": [
-        "The maximum number that can be parsed for a project commit.\n",
+        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.git.max_commit}}<@Blue>\n",
+        "The maximum number that can be parsed for a project commit. Default to 20.\n",
         "If it is <@Magenta>-1<@Blue>, all commits will be parsed.\n",
         "If there are a large number of project commits, setting <@Magenta>-1<@Blue> will affect the loading speed of the completion."
       ]
