--- a/completions/git/language/zh-CN.json
+++ b/completions/git/language/zh-CN.json
@@ -2023,10 +2023,13 @@
         0
       ],
       "tip": [
-        "设置是否禁用 hooks，默认为 0 表示不禁用\n",
-        "git 中的 hooks 主要用于解析 commit 信息、分支信息等, 然后动态添加到一些补全中(如 reset,checkout,branch 等)\n",
-        "如: git reset 后可以获取到解析出来的 commit，快速补全\n",
-        "如果你不需要它，你可以禁用它，这样可以提高补全的加载速度\n",
+        "当前值: <@Magenta>{{$PSCompletions.config.comp_config.git.disable_hooks}}<@Blue>\n",
+        "设置是否禁用 hooks，默认为 0 表示启用\n",
+        "hooks 将解析 commit 信息、分支信息等, 然后动态添加到补全中\n",
+        "(如 <@Magenta>reset<@Blue>,<@Magenta>checkout<@Blue>,<@Magenta>branch<@Blue> 等)\n",
+        "如: 输入 <@Magenta>git reset<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取额外的补全\n",
+        "   (这些额外的补全来自解析的 commit 信息)\n",
+        "你可以通过运行 <@Magenta>psc completion git disable_hooks 1<@Blue> 来禁用 hooks\n",
         "如果禁用它，那么 <@Magenta>max_commit<@Blue> 配置也将无效"
       ]
     },
@@ -2038,9 +2041,10 @@
         20
       ],
       "tip": [
-        "可以为当前项目解析的 commit 的最大数量\n",
-        "如果设置为 <@Magenta>-1<@Blue>, 会解析所有的 commit\n",
-        "如果项目 commit 数量较多，设置为 <@Magenta>-1<@Blue> 对补全加载的速度会有不小的影响"
+        "当前值: <@Magenta>{{$PSCompletions.config.comp_config.git.max_commit}}<@Blue>\n",
+        "可以为当前项目解析的 commit 的最大数量，默认为 20\n",
+        "如果设置为 <@Magenta>-1<@Blue>, 会解析所有 commit\n",
+        "如果项目 commit 数量较多，设置为 <@Magenta>-1<@Blue> 会对补全加载速度会有较大影响"
       ]
     }
   ]
