--- a/completions/wsl/language/zh-CN.json
+++ b/completions/wsl/language/zh-CN.json
@@ -442,10 +442,12 @@
         0
       ],
       "tip": [
-        "设置是否禁用 hooks，默认为 0 表示不禁用\n",
-        "wsl 中的 hooks 主要用于获取已添加的分发名称等, 然后动态添加到一些命令补全中(如 <@Magenta>-d/--distribution<@Blue>, <@Magenta>-t/--terminate<@Blue> 等)\n",
-        "如: 输入 <@Magenta>wsl -d<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取到额外的动态添加的补全\n",
-        "你可以通过运行 <@Magenta>psc completion scoop disable_hooks 1<@Blue> 来禁用 hooks"
+        "当前值: <@Magenta>{{$PSCompletions.config.comp_config.wsl.disable_hooks}}<@Blue>\n",
+        "设置是否禁用 hooks，默认为 0 表示启用\n",
+        "hooks 将获取已添加的分发名称等, 然后动态添加到命令补全中\n",
+        "(如 <@Magenta>-d<@Blue>/<@Magenta>--distribution<@Blue>, <@Magenta>-t<@Blue>/<@Magenta>--terminate<@Blue> 等)\n",
+        "如: 输入 <@Magenta>wsl -d<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取到额外的分发名称补全\n",
+        "你可以通过运行 <@Magenta>psc completion wsl disable_hooks 1<@Blue> 来禁用 hooks"
       ]
     }
   ]
