feat(completions): update
- Add hooks function for npm, pnpm, and yarn

--- a/completions/pnpm/language/en-US.json
+++ b/completions/pnpm/language/en-US.json
@@ -210,6 +210,7 @@
     },
     {
       "name": "run",
+      "symbol":"SpaceTab",
       "tip": "Runs a defined package script"
     },
     {
@@ -312,5 +313,24 @@
       "url": "https://pnpm.io/",
       "description": "pnpm - Package Manager"
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.pnpm.disable_hooks}}<@Blue>\n",
+        "Set whether to disable hooks. Default to 0.\n",
+        "The hooks will parse the scripts/dependencies/devDependencies fields in package.json and add them in completions dynamically.\n",
+        "(e.g. <@Magenta>run<@Blue>, <@Magenta>rm<@Blue>/<@Magenta>remove<@Blue>, <@Magenta>update<@Blue>/<@Magenta>up<@Blue>/<@Magenta>upgrade<@Blue>...)\n",
+        "For example, enter <@Magenta>pnpm run<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions.\n",
+        "(The extra completions come from the scripts command defined in package.json.)\n",
+        "You can disable hooks by running <@Magenta>psc completion pnpm disable_hooks 1<@Blue>."
+      ]
+    }
+  ]
 }
