--- a/completions/npm/language/en-US.json
+++ b/completions/npm/language/en-US.json
@@ -125,6 +125,7 @@
         },
         {
             "name": "run",
+            "symbol":"SpaceTab",
             "tip": [
                 "U: run <script>\n",
                 "Run a script defined in package.json.\n",
@@ -299,5 +300,24 @@
             "url": "https://www.npmjs.com/",
             "description": "npm - package manager"
         }
+    },
+    "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "Current Value: <@Magenta>{{$PSCompletions.config.comp_config.npm.disable_hooks}}<@Blue>\n",
+        "Set whether to disable hooks. Default to 0.\n",
+        "The hooks will parse the scripts/dependencies/devDependencies fields in package.json and add them in completions dynamically.\n",
+        "(e.g. <@Magenta>run<@Blue>, <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue>...)\n",
+        "For example, enter <@Magenta>npm run<@Blue>, press <@Magenta>Space<@Blue> and <@Magenta>Tab<@Blue> key, and you can get some extra completions.\n",
+        "(The extra completions come from the scripts command defined in package.json.)\n",
+        "You can disable hooks by running <@Magenta>psc completion npm disable_hooks 1<@Blue>."
+      ]
     }
+  ]
 }
