--- a/completions/npm/language/zh-CN.json
+++ b/completions/npm/language/zh-CN.json
@@ -125,6 +125,7 @@
         },
         {
             "name": "run",
+            "symbol":"SpaceTab",
             "tip": [
                 "U: run <script>\n",
                 "运行 package.json 中定义的 scripts\n",
@@ -299,5 +300,24 @@
             "url": "https://www.npmjs.com/",
             "description": "npm - 软件包管理器"
         }
+    },
+    "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "当前值: <@Magenta>{{$PSCompletions.config.comp_config.npm.disable_hooks}}<@Blue>\n",
+        "设置是否禁用 hooks，默认为 0 表示启用\n",
+        "hooks 将解析 package.json 中的 scripts/dependencies/devDependencies 等字段, 然后动态添加到补全中\n",
+        "(如 <@Magenta>run<@Blue>, <@Magenta>uninstall<@Blue>, <@Magenta>update<@Blue> 等)\n",
+        "如: 输入 <@Magenta>npm run<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取额外的补全\n",
+        "   (这些额外的补全来自 package.json 中定义的 scripts 命令)\n",
+        "你可以通过运行 <@Magenta>psc completion npm disable_hooks 1<@Blue> 来禁用 hooks"
+      ]
     }
+  ]
 }
