--- a/completions/yarn/language/zh-CN.json
+++ b/completions/yarn/language/zh-CN.json
@@ -118,10 +118,12 @@
     },
     {
       "name": "remove",
+      "symbol":"SpaceTab",
       "tip": "从项目中移除依赖项"
     },
     {
       "name": "run",
+      "symbol":"SpaceTab",
       "tip": "运行任意包脚本"
     },
     {
@@ -146,6 +148,7 @@
     },
     {
       "name": "upgrade",
+      "symbol":"SpaceTab",
       "tip": "将依赖项升级到最新版本"
     },
     {
@@ -452,5 +455,24 @@
       "url": "https://classic.yarnpkg.com/",
       "description": "yarn - 软件包管理器"
     }
-  }
+  },
+  "config": [
+    {
+      "name": "disable_hooks",
+      "value": 0,
+      "values": [
+        1,
+        0
+      ],
+      "tip": [
+        "当前值: <@Magenta>{{$PSCompletions.config.comp_config.yarn.disable_hooks}}<@Blue>\n",
+        "设置是否禁用 hooks，默认为 0 表示启用\n",
+        "hooks 将解析 package.json 中的 scripts/dependencies/devDependencies 等字段, 然后动态添加到补全中\n",
+        "(如 <@Magenta>run<@Blue>, <@Magenta>remove<@Blue>, <@Magenta>upgrade<@Blue> 等)\n",
+        "如: 输入 <@Magenta>yarn upgrade<@Blue> 后按下 <@Magenta>Space<@Blue>(空格) 和 <@Magenta>Tab<@Blue> 键可以获取额外的补全\n",
+        "   (这些额外的补全来自 package.json 中定义的 dependencies 和 devDependencies 字段)\n",
+        "你可以通过运行 <@Magenta>psc completion yarn disable_hooks 1<@Blue> 来禁用 hooks"
+      ]
+    }
+  ]
 }
