fix(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -880,7 +880,7 @@
               "tip": [
                 "Current Value: {{ $PSCompletions.config.menu_is_prefix_match }} (Default: 0, it means using fuzzy matching.)\n",
                 "Set whether the menu uses prefix matching mode for completion list filtering.\n",
-                "If set to 1, the common prefix of the current completion list will be automatically extracted."
+                "If use prefix matching mode (set to 1), the common prefix of the current completion list will be automatically extracted."
               ],
               "next": [
                 {
