--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -842,7 +842,7 @@
               "tip": [
                 "当前值: {{ $PSCompletions.config.menu_is_prefix_match }} (默认值为 0, 表示使用模糊匹配)\n",
                 "设置菜单是否使用前缀匹配模式进行补全过滤\n",
-                "如果你开启了前缀匹配, 将会自动提取当前补全候选的共用前缀"
+                "如果你开启了前缀匹配(设置为1), 将会自动提取当前补全候选的共用前缀"
               ],
               "next": [
                 {
@@ -856,7 +856,7 @@
                   "name": "1",
                   "tip": [
                     "设置为 1\n",
-                    "使用前缀匹配, 你只需要输入前缀即可匹配到相关的补全项",
+                    "使用前缀匹配, 你只需要输入前缀即可匹配到相关的补全项\n",
                     "如果存在共用的前缀, 会自动提取"
                   ]
                 }
