feat(completions): Add hooks for volta

--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -2,6 +2,7 @@
   "root": [
     {
       "name": "pin",
+      "symbol": "SpaceTab",
       "tip": ["锁定项目运行时或包管理器\n", "E: pin node@lts"]
     },
     {
