--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -2,6 +2,7 @@
   "root": [
     {
       "name": "pin",
+      "symbol": "SpaceTab",
       "tip": [
         "Pin your project's runtime or package manager\n",
         "E: pin node@lts"
